# DAGPap24

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: config_baseline.yml
src/: eval_f1.py  utils.py
src/ml_gen_detection/: dagpap24_baseline.py  hf_token_classification.py
