[tool.poetry]
name = "generated-content-detection"
version = "0.2.0"
description = ""
authors = ["Chamezopoulos Savvas", "Yury Kashnitsky"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
seaborn = "^0.12.2"
transformers = "^4.27.1"
scikit-learn = "^1.2.2"
evaluate = "^0.4.0"
torch = "^2.0.0"
datasets = "^2.10.1"
jupyter = "^1.0.0"
unidecode = "^1.3.6"
pre-commit = "^3.2.0"
openai = "^0.27.4"
nltk = "^3.8.1"
fastparquet = "^2023.2.0"
python-dotenv = "^1.0.1"
accelerate = "^0.27.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
tqdm = "^4.65.0"
isort = "^5.12.0"
black = "^23.1.0"
ipykernel = "^6.21.3"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
